@@ -42,6 +42,8 @@ dpkg (1.16.5) UNRELEASED; urgency=low
   * Change all programs to accept -? instead of -h for help output.
   * Add support for specific arch-qualified dependencies. Closes: #676232
     Thanks to Thibaut Girka <thib@sitedethib.com>.
+  * Accept “:native” arch-qualified Build-Dependencies. Closes: #558095
+    Thanks to Thibaut Girka <thib@sitedethib.com>.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
